# tflite_server

./: CMakeLists.txt  README.md
src/: main.cpp  tflite_model.cpp  tflite_model.h
tests/: mobilenet_test.py  speed_test.py  test.py
